--- a/index.html
+++ b/index.html
@@ -15,3 +15,12 @@ https://docs.google.com/spreadsheets/d/e/2PACX-1vRlK-vRwPJHDaANT81EjyG4m5ZnLXdKR
 
 Backup bản quyền:
 https://docs.google.com/document/d/e/2PACX-1vS6qiila2Ty-AjMYyw3k7GJY-T2qiKqkL-NsUwQHU85Ckqy5iTRDVHNgy3Rbm4f_ORzNBorELALEPIk/pub
+
+Adobe Crack của da.tuu.1810:
+https://docs.google.com/document/d/1eGe5MAWn-_YypoJSgopnyJGaCdzjKlqlirRCtySGsak/edit
+
+Conan OneDrive:
+https://t.ly/ymH1
+
+Tài liệu người ta (Khánh):
+https://pitvn-my.sharepoint.com/:f:/g/personal/giakhanh_pitvn_onmicrosoft_com/Ei7jAqH3oDdCp7hLqSxPrm0BgGGANoKInO1n8_t6CNp0pQ?e=xPoqkC
