--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+Tổng hợp:
+bit.ly/pitvn69
+
 SOFTWAREs:
 https://docs.google.com/spreadsheets/d/e/2PACX-1vRlK-vRwPJHDaANT81EjyG4m5ZnLXdKRYfS0eKXyCzGymEfUDmKHRhxvUbtWYTfVn7MJ3E2jk7v3cGi/pubhtml?gid=857193120&single=true
 
